--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chau+Philomene+One:ital@0;1&family=Lilita+One&display=swap');
 
 :root {
-    --preto: #000000;
+    --preto: #d79fff;
     --lilas:#be9eff;
     --rosa-es: #6340a6;
     --rosa-esc: #e979ff;
